feat: mejora de galeria

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- AOS y Lightbox -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -44,64 +44,70 @@
   <main>
     <section id="inicio" data-aos="fade-up">
       <h2>Bienvenido</h2>
-      <p>Descubre <strong>Altos de Molineros</strong>, un exclusivo proyecto de parcelas en el corazón del Valle de Colchagua. Un entorno natural, tranquilo y con conectividad privilegiada.</p>
+      <p>Descubre <strong>Altos de Molineros</strong>, un exclusivo proyecto de parcelas en el corazón del Valle de Colchagua.</p>
       <a href="https://wa.me/56912345678" class="cta-button" target="_blank" rel="noopener">Agendar visita por WhatsApp</a>
     </section>
 
     <section id="proyecto" data-aos="fade-up">
       <h2>Sobre el Proyecto</h2>
-      <p>El proyecto <strong>Altos de Molineros</strong> está ubicado en pleno Valle de Colchagua, en el sector Rinconada de Molineros, comuna de Peralillo (VI Región del Libertador Bernardo O’Higgins). Está próximo a la <strong>Viña Los Vascos</strong>, una viña premium reconocida mundialmente, con más de 640 hectáreas de viñedos.</p>
-      <p>Este desarrollo contempla solo <strong>11 parcelas de 5.000 m²</strong> con topografías variadas (lomajes, pie de cerro), todas con vistas privilegiadas y paisajes únicos. Las parcelas están listas para escriturar y cuentan con urbanización completa: caminos asfaltados, agua potable y de pozo, electricidad y acceso a fibra óptica.</p>
-      <p>La ubicación es estratégica: a pasos de escuela, centro médico, supermercados, media luna y estadio. Excelente conectividad a zonas urbanas y turísticas: a 150 min de Santiago, 20 min de Santa Cruz, 50 min de Pichilemu y 45 min del Lago Rapel.</p>
-      <p>El reglamento del proyecto está diseñado para proteger el entorno, seleccionando <strong>materiales, formas y colores</strong> que se integran armónicamente al paisaje. La propuesta arquitectónica combina <em>tradición y modernidad</em>, destacando el valor de la zona central de Chile.</p>
-      <p><strong>Altos de Molineros</strong> promueve soluciones habitacionales sustentables para primera o segunda vivienda, considerando casas con jardín, piscina, quincho y estacionamiento.</p>
+      <p>El proyecto <strong>Altos de Molineros</strong> está ubicado en pleno Valle de Colchagua...</p>
     </section>
 
     <section id="galeria" data-aos="fade-up">
-      <h2>Galería</h2>
-      <div class="galeria">
-        <!-- Galería de imágenes con Lightbox -->
-        <a href="images/imagen1.jpg" data-lightbox="galeria"><img src="images/imagen1.jpg" alt="Imagen 1" /></a>
-        <a href="images/imagen2.jpg" data-lightbox="galeria"><img src="images/imagen2.jpg" alt="Imagen 2" /></a>
-        <a href="images/imagen3.jpg" data-lightbox="galeria"><img src="images/imagen3.jpg" alt="Imagen 3" /></a>
-        <a href="images/imagen4.jpg" data-lightbox="galeria"><img src="images/imagen4.jpg" alt="Imagen 4" /></a>
-        <a href="images/imagen5.jpg" data-lightbox="galeria"><img src="images/imagen5.jpg" alt="Imagen 5" /></a>
-        <a href="images/imagen6.jpg" data-lightbox="galeria"><img src="images/imagen6.jpg" alt="Imagen 6" /></a>
-        <a href="images/imagen7.jpg" data-lightbox="galeria"><img src="images/imagen7.jpg" alt="Imagen 7" /></a>
-        <a href="images/imagen8.jpg" data-lightbox="galeria"><img src="images/imagen8.jpg" alt="Imagen 8" /></a>
-        <a href="images/imagen9.jpg" data-lightbox="galeria"><img src="images/imagen9.jpg" alt="Imagen 9" /></a>
-        <a href="images/imagen10.jpg" data-lightbox="galeria"><img src="images/imagen10.jpg" alt="Imagen 10" /></a>
-      </div>
-    </section>
-
-<section id="ubicacion" data-aos="fade-up">
-  <h2>Ubicación</h2>
-  <p>Rinconada de Molineros, Peralillo – VI Región, Chile.</p>
-  <div class="map-container">
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3286.9960181983324!2d-71.56479712438683!3d-34.52832885352033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scl!4v1752259634618!5m2!1ses-419!2scl" 
-      width="100%" 
-      height="400" 
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy" 
-      referrerpolicy="no-referrer-when-downgrade"
-      title="Mapa Ubicación Altos de Molineros">
-    </iframe>
+  <h2>Galería</h2>
+  <div class="galeria">
+    <!-- Galería de imágenes con Lightbox -->
+    <a href="images/imagen1.jpg" data-lightbox="galeria" data-title="Imagen 1">
+      <img src="images/imagen1.jpg" alt="Imagen 1" />
+    </a>
+    <a href="images/imagen2.jpg" data-lightbox="galeria" data-title="Imagen 2">
+      <img src="images/imagen2.jpg" alt="Imagen 2" />
+    </a>
+    <a href="images/imagen3.jpg" data-lightbox="galeria" data-title="Imagen 3">
+      <img src="images/imagen3.jpg" alt="Imagen 3" />
+    </a>
+    <a href="images/imagen4.jpg" data-lightbox="galeria" data-title="Imagen 4">
+      <img src="images/imagen4.jpg" alt="Imagen 4" />
+    </a>
+    <a href="images/imagen5.jpg" data-lightbox="galeria" data-title="Imagen 5">
+      <img src="images/imagen5.jpg" alt="Imagen 5" />
+    </a>
+    <a href="images/imagen6.jpg" data-lightbox="galeria" data-title="Imagen 6">
+      <img src="images/imagen6.jpg" alt="Imagen 6" />
+    </a>
+    <a href="images/imagen7.jpg" data-lightbox="galeria" data-title="Imagen 7">
+      <img src="images/imagen7.jpg" alt="Imagen 7" />
+    </a>
+    <a href="images/imagen8.jpg" data-lightbox="galeria" data-title="Imagen 8">
+      <img src="images/imagen8.jpg" alt="Imagen 8" />
+    </a>
+    <a href="images/imagen9.jpg" data-lightbox="galeria" data-title="Imagen 9">
+      <img src="images/imagen9.jpg" alt="Imagen 9" />
+    </a>
+    <a href="images/imagen10.jpg" data-lightbox="galeria" data-title="Imagen 10">
+      <img src="images/imagen10.jpg" alt="Imagen 10" />
+    </a>
   </div>
 </section>
 
+
+    <section id="ubicacion" data-aos="fade-up">
+      <h2>Ubicación</h2>
+      <p>Rinconada de Molineros, Peralillo – VI Región, Chile.</p>
+      <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="400" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Mapa Ubicación Altos de Molineros"></iframe>
+      </div>
+    </section>
+
     <section id="masterplan" data-aos="fade-up">
       <h2>Máster Plan y Ubicación Satelital</h2>
-
       <div class="masterplan">
         <h3>Máster Plan</h3>
         <img src="plan.jpg" alt="Máster Plan del Proyecto" loading="lazy" />
       </div>
-
       <div class="satelital">
         <h3>Vista Satelital</h3>
-        <img src="images/satelital.jpg" alt="Máster Plan del Proyecto" loading="lazy" />
+        <img src="images/satelital.jpg" alt="Vista Satelital" loading="lazy" />
       </div>
     </section>
 
@@ -125,7 +131,17 @@
   <!-- Scripts -->
   <script src="script.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
-  <script>AOS.init();</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js"></script>
+  <script>
+    AOS.init();
+    lightbox.option({
+      resizeDuration: 200,
+      wrapAround: true,
+      fadeDuration: 300,
+      imageFadeDuration: 300,
+      albumLabel: "Imagen %1 de %2",
+      disableScrolling: true
+    });
+  </script>
 </body>
 </html>
