--- a/index.html
+++ b/index.html
@@ -92,12 +92,22 @@
 
 
     <section id="ubicacion" data-aos="fade-up">
-      <h2>Ubicación</h2>
-      <p>Rinconada de Molineros, Peralillo – VI Región, Chile.</p>
-      <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="400" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Mapa Ubicación Altos de Molineros"></iframe>
-      </div>
-    </section>
+  <h2>Ubicación</h2>
+  <p>Rinconada de Molineros, Peralillo – VI Región, Chile.</p>
+  <div class="map-container">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3286.9960181983324!2d-71.56479712438683!3d-34.52832885352033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scl!4v1752259634618!5m2!1ses-419!2scl" 
+      width="100%" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade"
+      title="Mapa Ubicación Altos de Molineros">
+    </iframe>
+  </div>
+</section>
+
 
     <section id="masterplan" data-aos="fade-up">
       <h2>Máster Plan y Ubicación Satelital</h2>
