hotfix: texto faltante

--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
     </nav>
   </header>
 
-  <main>
+   <main>
     <section id="inicio" data-aos="fade-up">
       <h2>Bienvenido</h2>
-      <p>Descubre <strong>Altos de Molineros</strong>, un exclusivo proyecto de parcelas en el corazón del Valle de Colchagua.</p>
+      <p>Descubre <strong>Altos de Molineros</strong>, un exclusivo proyecto de parcelas en el corazón del Valle de Colchagua. Un entorno natural, tranquilo y con conectividad privilegiada.</p>
       <a href="https://wa.me/56912345678" class="cta-button" target="_blank" rel="noopener">Agendar visita por WhatsApp</a>
     </section>
 
     <section id="proyecto" data-aos="fade-up">
       <h2>Sobre el Proyecto</h2>
-      <p>El proyecto <strong>Altos de Molineros</strong> está ubicado en pleno Valle de Colchagua...</p>
+      <p>El proyecto <strong>Altos de Molineros</strong> está ubicado en pleno Valle de Colchagua, en el sector Rinconada de Molineros, comuna de Peralillo (VI Región del Libertador Bernardo O’Higgins). Está próximo a la <strong>Viña Los Vascos</strong>, una viña premium reconocida mundialmente, con más de 640 hectáreas de viñedos.</p>
+      <p>Este desarrollo contempla solo <strong>11 parcelas de 5.000 m²</strong> con topografías variadas (lomajes, pie de cerro), todas con vistas privilegiadas y paisajes únicos. Las parcelas están listas para escriturar y cuentan con urbanización completa: caminos asfaltados, agua potable y de pozo, electricidad y acceso a fibra óptica.</p>
+      <p>La ubicación es estratégica: a pasos de escuela, centro médico, supermercados, media luna y estadio. Excelente conectividad a zonas urbanas y turísticas: a 150 min de Santiago, 20 min de Santa Cruz, 50 min de Pichilemu y 45 min del Lago Rapel.</p>
+      <p>El reglamento del proyecto está diseñado para proteger el entorno, seleccionando <strong>materiales, formas y colores</strong> que se integran armónicamente al paisaje. La propuesta arquitectónica combina <em>tradición y modernidad</em>, destacando el valor de la zona central de Chile.</p>
+      <p><strong>Altos de Molineros</strong> promueve soluciones habitacionales sustentables para primera o segunda vivienda, considerando casas con jardín, piscina, quincho y estacionamiento.</p>
     </section>
-
     <section id="galeria" data-aos="fade-up">
   <h2>Galería</h2>
   <div class="galeria">
