fix: logo name error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="header-content">
       <div class="logo-section">
-        <div class="logo">href="images/logo.jpg"</div>
+        <div class="logo">AM"</div>
         <div class="logo-text">Altos de Molineros</div>
       </div>
       
