feat: satelital view section

--- a/index.html
+++ b/index.html
@@ -279,6 +279,18 @@
       </div>
     </section>
 
+        <section class="container" data-aos="fade-up">
+      <h2 class="section-title">Vista Satelital</h2>
+      <p class="section-subtitle">Perspectiva aérea del proyecto y su entorno privilegiado</p>
+      
+      <div style="text-align: center; margin: 3rem 0;">
+        <img src="images/satelital.jpg" alt="Vista Satelital - Altos de Molineros" 
+             style="width: 100%; max-width: 800px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); cursor: pointer;"
+             onclick="lightbox.open([{src: 'images/satelital.jpg', title: 'Vista Satelital - Altos de Molineros'}], 0)" />
+      </div>
+    </section>
+
+
     <section id="contacto" class="container" data-aos="fade-up">
       <h2 class="section-title">Contáctanos</h2>
       <p class="section-subtitle">Estamos aquí para resolver todas tus dudas y agendar tu visita</p>
